# second_test

./: CMakeLists.txt
data/: com.github.BroverBug.second_test.desktop  com.github.broverbug.second_test.appdata.xml  com.github.broverbug.second_test.desktop
po/: CMakeLists.txt
src/: hello-again  hello-again.vala
